--- a/booking.html
+++ b/booking.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="booking.css" />
+  </head>
+  <body>
+    <header>
+      <a id="logo" href="index.html">Tickethack</a>
+      <div id="links">
+        <a href="cart.html" id="cart">Cart</a><a href="">Bookings</a>
+      </div>
+    </header>
+    <div id="container">
+      <div id="bookContainer">
+        <p id="bookTitle">My bookings</p>
+        <div class="item">
+          <p id="trip">Paris > Marseille</p>
+          <p id="time">20:09</p>
+          <p id="price">103 €</p>
+          <p id="timing">Departure in 5 hours</p>
+        </div>
+        <div id="enjoy">
+          <span id="line"></span>
+          <p>Enjoy your travels with Tickethack!</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
