--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <Link rel="stylesheet" href="style.css"></Link>
 </head>
 <body>
+    <header>
+        <h1 id="logo">Tickethack</h1>
+        <div id="links">
+            <a href="cart.html" id="cart">Cart</a><a href="booking.html">Bookings</a>
+        </div>
+    </header>
+    <div id="container">
+<div id="title">
+    <h1>Explore the world effortlessly by train!</h1>
+    <h3>Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack.</h3>
+</div>
+<div id="boxesContainer">
+    <div id="box" class="find">
+        <div id="inputs">
+        <input type="text" id="departure" placeholder="Departure">
+        <input type="text" id="arrival" placeholder="Arrival">
+        <input type="date" name="" id="calendar">    
+        </div>
+
+        <button id="search">Search</button>
+    </div>
+
+    <div id="box" class="result">
+        <img src="images/train.png" alt="">
+        <span id="line"></span>
+        <p>It's time to book your future trip</p>
+    </div>
+</div>
+
+    </div>
     
 </body>
 </html>
