regiter item in cart

--- a/cart.html
+++ b/cart.html
@@ -17,11 +17,13 @@
     <div id="container">
           <div id="cartContainer">
         <p id="cartTitle">My cart</p>
-        <div class="item">
+        <div class="itemContainer">
+                   <div class="item">
             <p id="trip">Paris > Marseille</p>
             <p id="time">20:09</p>
             <p id="price">103 €</p>
             <button id="delete">X</button>
+        </div> 
         </div>
         <div id="total">
             <p id="sum">Total: 103 €</p>
@@ -29,6 +31,6 @@
         </div>
     </div>  
     </div>
-
+<script src="cart.js"></script> 
 </body>
 </html>
